--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -5,13 +5,15 @@
         <div class="col-8 offset-2">
     <h3>Create a New Listing</h3>
     
-    <form method="post" action="/listings/new">
+    <form method="post" action="/listings/new" novalidate class="needs-validation">
         <div class="mb-3"><label for="title" class="form-label">Title</label>
-            <input name="l[title]" placeholder="enter title" class="form-control">
+            <input name="l[title]" placeholder="enter title" class="form-control" required>
+            <div class="invalid-feedback">Enter a correct Title</div>
         </div>
         <div class="mb-3">
             <label for="description" class="form-label">Description</label>
-            <textarea name="l[description]" placeholder="" class="form-control"></textarea>
+            <textarea name="l[description]" placeholder="" class="form-control" required></textarea>
+            <div class="invalid-feedback">Enter a correct Description</div>
         </div>
         <div class="mb-3">
             <label for="image" class="form-label">image</label>
@@ -20,15 +22,18 @@
         <div class="row">
         <div class="mb-3 col-md-4">
             <label for="price" class="form-label">Price</label>
-            <input name="l[price]" placeholder="enter price" type="number" class="form-control">
+            <input name="l[price]" placeholder="enter price"  class="form-control" required>
+            <div class="invalid-feedback">Enter a correct Price</div>
         </div>
         <div class="mb-3 col-md-8">
             <label for="country" class="form-label">Country</label>
-            <input name="l[country]" placeholder="enter country" class="form-control">
+            <input name="l[country]" placeholder="enter country" class="form-control" required>
+            <div class="invalid-feedback">Enter a correct Country name</div>
         </div></div>
         <div class="mb-3">
             <label for="location" class="form-label">Location</label>
-            <input name="l[location]" placeholder="enter location" class="form-control">
+            <input name="l[location]" placeholder="enter location" class="form-control" required>
+            <div class="invalid-feedback">Enter a correct Location</div>
         </div>
         <br>
         <button class="add-btn">Add</button>
