--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -2,13 +2,13 @@
 <body>
     <div class="row">
         <div class="col-8 offset-3 mt-3">
-    <h3>Listing Details </h3>
+    <h3><%= L.title%> </h3><br>
     </div>
     <div class="card col-6 offset-3">
         <img src="<%=L.image%>" class="card-img-top show-img" alt="listing_image">
         <div class="card-body">
           <p class="card-text">
-            <b><%= L.title%></b><br><br>
+            
             <%= L.description %><br>
         &#8377;<%= L.price.toLocaleString("en-IN") %><br>
         <%= L.location %><br>
@@ -21,5 +21,49 @@
     <form method="post" action="/listing/<%= L._id %>?_method=DELETE">
         <button class="btn btn-dark offset-5">Delete </button>
     </form>
-    </div></div>
+    </div>
+
+    <div class="col-8 offset-3 mb-2">
+        <hr>
+        <h4>Leave a review</h4>
+        <form action="/listings/<%=L.id%>/review" method="post" novalidate class="needs-validation">
+            <div class="mb-3 mt-3">
+                <label for="rating" class="form-label">Rating</label>
+                <pre>1                           2                          3                          4                          5</pre>
+                <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
+            </div>
+            <div class="mb-3 mt-3">
+                <label for="nam" class="form-label">UserName</label>
+                <input name="review[nam]" id="comment" cols="30" rows="1" class="form-control" type="text" required>
+                <div class="invalid-feedback">Please provide your userName</div>
+            </div>
+            <div class="mb-3 mt-3">
+                <label for="comment" class="form-label">Comment</label>
+                <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control" required></textarea>
+                <div class="invalid-feedback">Please add your valuable feedback</div>
+            </div>
+            <button class="btn btn-outline-dark">Submit</button>
+        </form>
+        <hr>
+        <h4><b>All Reviews</b></h4>
+        <div class="row">
+        <% for(review of L.reviews) {%>
+            <div class="card col-6">
+                <div class="card text-bg-light mb-1" style="padding: 0px 15px 15px 15px;">
+                    
+                    <div class="card-body">
+                        <p class="card-text"><b><%= review.nam%></b> </p>
+                      <h6 class="card-title"><%= review.rating%> Stars.</h6>
+                      <p class="card-text"><%= review.comment%> </p>
+                    </div>
+                    <form class="mt-3" method="post" action="/listings/<%= L._id %>/reviews/<%= review._id %>?_method=delete">
+                        <button class="btn btn-sm btn-dark">delete</button>
+                    </form>
+                  </div>
+            </div>
+            <% } %>
+        </div>
+
+    </div>
+</div>
 </body>
