login page and much other

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -113,7 +113,6 @@ footer{
     display: flex;
     align-items: space-between;
 }
-
-.show-card{
-    
+.show1{
+    margin-bottom: 20px !important;
 }
