--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -8,7 +8,7 @@
         </div>
         <div class="w">
             <i class="fa-regular fa-copyright"></i>&nbsp;
-            WanderLust Pvt. Ltd.</div>
+            TraveMate Pvt. Ltd.</div>
         <div class="f-info-links">
             <a href="/privacy">Privacy  </a>&nbsp;&nbsp;    
             <a href="/terms"> Terms</a>
