--- a/views/listings/index.ejs
+++ b/views/listings/index.ejs
@@ -1,7 +1,7 @@
 <%layout("/layouts/boilerplate.ejs")%>
 <body>
   <br>
-    <h3>All listings</h3><br>
+    <h3>All Hotels</h3><br>
     <!-- <form method="get" action="listings/new">
         <button>Create new listings</button>
     </form> -->
