--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -3,7 +3,7 @@
     <br>
     <div class="row">
         <div class="col-8 offset-2">
-    <h3>Create a New Listing</h3>
+    <h3>Add a New Hotel</h3>
     
     <form method="post" action="/listings/new" novalidate class="needs-validation">
         <div class="mb-3"><label for="title" class="form-label">Title</label>
