--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -4,26 +4,27 @@
         <div class="col-8 offset-3 mt-3">
     <h3><%= L.title%> </h3><br>
     </div>
-    <div class="card col-6 offset-3">
+    <div class="card col-6 offset-3 show1">
         <img src="<%=L.image%>" class="card-img-top show-img" alt="listing_image">
         <div class="card-body">
           <p class="card-text">
-            
-            <%= L.description %><br>
-        &#8377;<%= L.price.toLocaleString("en-IN") %><br>
-        <%= L.location %><br>
-        <%= L.country %><br>
-        </p>
+           <i>Owned By <%= L.owner.username %></i></p>
+           <p class="card-text"><%= L.description %></p>
+           <p class="card-text"> &#8377;<%= L.price.toLocaleString("en-IN") %></p>
+           <p class="card-text"> <%= L.location %></p>
+           <p class="card-text"> <%= L.country %></p>
         </div>
     </div>
+    <% if(currUser && L.owner._id.equals(currUser._id)){ %>
     <div class="btns">
     <a href="/listings/<%=L._id%>/edit" class="btn add-btn btn-dark col-1 offset-3">Edit </a>
-    <form method="post" action="/listing/<%= L._id %>?_method=DELETE">
+    <form method="post" action="/listings/<%= L._id %>?_method=DELETE">
         <button class="btn btn-dark offset-5">Delete </button>
     </form>
     </div>
-
+    <% } %>
     <div class="col-8 offset-3 mb-2">
+        <% if(currUser){ %>
         <hr>
         <h4>Leave a review</h4>
         <form action="/listings/<%=L.id%>/review" method="post" novalidate class="needs-validation">
@@ -32,11 +33,11 @@
                 <pre>1                           2                          3                          4                          5</pre>
                 <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
             </div>
-            <div class="mb-3 mt-3">
+            <!-- <div class="mb-3 mt-3">
                 <label for="nam" class="form-label">UserName</label>
                 <input name="review[nam]" id="comment" cols="30" rows="1" class="form-control" type="text" required>
                 <div class="invalid-feedback">Please provide your userName</div>
-            </div>
+            </div> -->
             <div class="mb-3 mt-3">
                 <label for="comment" class="form-label">Comment</label>
                 <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control" required></textarea>
@@ -44,19 +45,19 @@
             </div>
             <button class="btn btn-outline-dark">Submit</button>
         </form>
+        <% } %>
         <hr>
         <h4><b>All Reviews</b></h4>
         <div class="row">
         <% for(review of L.reviews) {%>
             <div class="card col-6">
                 <div class="card text-bg-light mb-1" style="padding: 0px 15px 15px 15px;">
-                    
                     <div class="card-body">
-                        <p class="card-text"><b><%= review.nam%></b> </p>
+                        <p class="card-text"><b> @<%= review.author.username%></b> </p>
                       <h6 class="card-title"><%= review.rating%> Stars.</h6>
                       <p class="card-text"><%= review.comment%> </p>
                     </div>
-                    <form class="mt-3" method="post" action="/listings/<%= L._id %>/reviews/<%= review._id %>?_method=delete">
+                    <form class="mt-3" method="post" action="/listings/<%= L._id %>/review/<%= review._id %>?_method=delete">
                         <button class="btn btn-sm btn-dark">delete</button>
                     </form>
                   </div>
