--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -29,15 +29,21 @@
         <h4>Leave a review</h4>
         <form action="/listings/<%=L.id%>/review" method="post" novalidate class="needs-validation">
             <div class="mb-3 mt-3">
-                <label for="rating" class="form-label">Rating</label>
-                <pre>1                           2                          3                          4                          5</pre>
-                <input type="range" min="1" max="5" id="rating" name="review[rating]" class="form-range">
-            </div>
-            <!-- <div class="mb-3 mt-3">
-                <label for="nam" class="form-label">UserName</label>
-                <input name="review[nam]" id="comment" cols="30" rows="1" class="form-control" type="text" required>
-                <div class="invalid-feedback">Please provide your userName</div>
-            </div> -->
+                <fieldset class="starability-slot">
+                    <legend>Rating:</legend>
+                    <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
+                    <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                    <label for="first-rate1" title="Terrible">1 star</label>
+                    <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                    <label for="first-rate2" title="Not good">2 stars</label>
+                    <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                    <label for="first-rate3" title="Average">3 stars</label>
+                    <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                    <label for="first-rate4" title="Very good">4 stars</label>
+                    <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                    <label for="first-rate5" title="Amazing">5 stars</label>
+                  </fieldset>
+            </div> 
             <div class="mb-3 mt-3">
                 <label for="comment" class="form-label">Comment</label>
                 <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control" required></textarea>
@@ -54,12 +60,16 @@
                 <div class="card text-bg-light mb-1" style="padding: 0px 15px 15px 15px;">
                     <div class="card-body">
                         <p class="card-text"><b> @<%= review.author.username%></b> </p>
-                      <h6 class="card-title"><%= review.rating%> Stars.</h6>
+                      <p class="starability-result card-text" data-rating="<%=review.rating%>">
+                       
+                      </p>
                       <p class="card-text"><%= review.comment%> </p>
                     </div>
+                    <% if(currUser && review.author._id.equals(currUser._id)){ %>
                     <form class="mt-3" method="post" action="/listings/<%= L._id %>/review/<%= review._id %>?_method=delete">
                         <button class="btn btn-sm btn-dark">delete</button>
                     </form>
+                    <% } %>
                   </div>
             </div>
             <% } %>
