--- a/views/listings/new.ejs
+++ b/views/listings/new.ejs
@@ -1,4 +1,5 @@
 <%layout("/layouts/boilerplate.ejs")%>
+
 <body>
     <br>
     <div class="row">
@@ -17,7 +18,7 @@
         </div>
         <div class="mb-3">
             <label for="image" class="form-label">Upload Image </label>
-            <input name="l[image]" type="file" class="form-control">
+            <input name="l[image]" type="file" class="form-control" required>
         </div>
         <div class="row">
         <div class="mb-3 col-md-4">
