--- a/views/includes/flash.ejs
+++ b/views/includes/flash.ejs
@@ -1,13 +1,15 @@
-<% if(success && success.length){ %>
-<div class="alert alert-success alert-dismissible fade show col-6 offset-3 mt-2" role="alert">
-    <%=success%>
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
+<% if (success && success.length) { %>
+  <div class="alert alert-success alert-dismissible fade show col-6 offset-3 mt-2" role="alert">
+      <%= success %>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
+  <% success = null; %>
 <% } %>
 
-<% if(error && error.length){ %>
+<% if (error && error.length) { %>
   <div class="alert alert-danger alert-dismissible fade show col-6 offset-3 mt-2" role="alert">
-      <%=error%>
-      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close">
-    </div>
-  <% } %>
+      <%= error %>
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  </div>
+  <% error = null; %>
+<% } %>
