--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,18 +1,37 @@
+<style>
+  .btn-search{
+    background-color: #fe424d;
+    color: #fff;
+  }
+  .btn-search:hover{
+    background-color: #fe424d;
+    color: #fff;
+  }
+  .search-inp{
+    width: 300px !important;
+  }
+</style>
+
 <nav class="navbar navbar-expand-lg navbar-light bg-body-light border-bottom sticky-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/"><i class="fa-regular fa-compass"></i></a>
+      <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass"></i></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link" aria-current="page" href="/">Home</a>
-          <a class="nav-link" href="/listings">All Hotels</a>
-          <a class="nav-link" href="/listings/new">Add new Hotel</a>
+          <a class="nav-link" href="/listings">Explore</a>
         </div> 
         <div class="navbar-nav ms-auto">
+          <form class="d-flex" role="search">
+            <input class="form-control me-2 search-inp" type="search" placeholder="Search Destination">
+            <button class="btn btn-search" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
+          </form>
+        </div>
+        <div class="navbar-nav ms-auto">
+          <a class="nav-link" href="/listings/new">Add new Hotel</a>
           <%if(!currUser){%>
-          <a class="nav-link" href="/login"><i class="fa-solid fa-circle-user mr-1" style="font-size:30px;"></i></a>
+          <a class="nav-link" href="/login"><b>Login</b></a>
           <% } %>
           <%if(currUser){%>
           <a class="nav-link" href="/logout">Logout</a>
