--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,80 +1,99 @@
-<%layout("/layouts/boilerplate.ejs")%>
+<% layout("/layouts/boilerplate.ejs") %>
+
+<script>
+    let maptoken = "<%= process.env.MAP_TOKEN %>";
+    let coordinates=<%-JSON.stringify(L.geometry.coordinates)%>;
+</script>
 <body>
     <div class="row">
         <div class="col-8 offset-3 mt-3">
-    <h3><%= L.title%> </h3><br>
-    </div>
-    <div class="card col-6 offset-3 show1">
-        <img src="<%=L.image%>" class="card-img-top show-img" alt="listing_image">
-        <div class="card-body">
-          <p class="card-text">
-           <i>Owned By <%= L.owner.username %></i></p>
-           <p class="card-text"><%= L.description %></p>
-           <p class="card-text"> &#8377;<%= L.price.toLocaleString("en-IN") %></p>
-           <p class="card-text"> <%= L.location %></p>
-           <p class="card-text"> <%= L.country %></p>
+            <h3><%= L.title %></h3><br>
         </div>
-    </div>
-    <% if(currUser && L.owner._id.equals(currUser._id)){ %>
-    <div class="btns">
-    <a href="/listings/<%=L._id%>/edit" class="btn add-btn btn-dark col-1 offset-3">Edit </a>
-    <form method="post" action="/listings/<%= L._id %>?_method=DELETE">
-        <button class="btn btn-dark offset-5">Delete </button>
-    </form>
-    </div>
-    <% } %>
-    <div class="col-8 offset-3 mb-2">
-        <% if(currUser){ %>
-        <hr>
-        <h4>Leave a review</h4>
-        <form action="/listings/<%=L.id%>/review" method="post" novalidate class="needs-validation">
-            <div class="mb-3 mt-3">
-                <fieldset class="starability-slot">
-                    <legend>Rating:</legend>
-                    <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
-                    <input type="radio" id="first-rate1" name="review[rating]" value="1" />
-                    <label for="first-rate1" title="Terrible">1 star</label>
-                    <input type="radio" id="first-rate2" name="review[rating]" value="2" />
-                    <label for="first-rate2" title="Not good">2 stars</label>
-                    <input type="radio" id="first-rate3" name="review[rating]" value="3" />
-                    <label for="first-rate3" title="Average">3 stars</label>
-                    <input type="radio" id="first-rate4" name="review[rating]" value="4" />
-                    <label for="first-rate4" title="Very good">4 stars</label>
-                    <input type="radio" id="first-rate5" name="review[rating]" value="5" />
-                    <label for="first-rate5" title="Amazing">5 stars</label>
-                  </fieldset>
-            </div> 
-            <div class="mb-3 mt-3">
-                <label for="comment" class="form-label">Comment</label>
-                <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control" required></textarea>
-                <div class="invalid-feedback">Please add your valuable feedback</div>
+        <div class="card col-6 offset-3 show1">
+            <img src="<%= L.image.url %>" class="card-img-top show-img" alt="listing_image">
+            <div class="card-body">
+                <p class="card-text"><i>Owned By <%= L.owner.username %></i></p>
+                <p class="card-text"><%= L.description %></p>
+                <p class="card-text">&#8377;<%= L.price.toLocaleString("en-IN") %></p>
+                <p class="card-text"><%= L.location %></p>
+                <p class="card-text"><%= L.country %></p>
             </div>
-            <button class="btn btn-outline-dark">Submit</button>
-        </form>
+        </div>
+        <% if (currUser && L.owner._id.equals(currUser._id)) { %>
+        <div class="btns">
+            <a href="/listings/<%= L._id %>/edit" class="btn add-btn btn-dark col-1 offset-3">Edit</a>
+            <form method="post" action="/listings/<%= L._id %>?_method=DELETE">
+                <button class="btn btn-dark offset-5">Delete</button>
+            </form>
+        </div>
         <% } %>
-        <hr>
-        <h4><b>All Reviews</b></h4>
-        <div class="row">
-        <% for(review of L.reviews) {%>
-            <div class="card col-6">
-                <div class="card text-bg-light mb-1" style="padding: 0px 15px 15px 15px;">
-                    <div class="card-body">
-                        <p class="card-text"><b> @<%= review.author.username%></b> </p>
-                      <p class="starability-result card-text" data-rating="<%=review.rating%>">
-                       
-                      </p>
-                      <p class="card-text"><%= review.comment%> </p>
-                    </div>
-                    <% if(currUser && review.author._id.equals(currUser._id)){ %>
-                    <form class="mt-3" method="post" action="/listings/<%= L._id %>/review/<%= review._id %>?_method=delete">
-                        <button class="btn btn-sm btn-dark">delete</button>
-                    </form>
-                    <% } %>
-                  </div>
-            </div>
+        <div class="col-8 offset-3 mb-2">
+            <% if(currUser){ %>
+            <hr>
+            <h4>Leave a review</h4>
+            <form action="/listings/<%=L.id%>/review" method="post" novalidate class="needs-validation">
+                <div class="mb-3 mt-3">
+                    <fieldset class="starability-slot">
+                        <legend>Rating:</legend>
+                        <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="1" checked aria-label="No rating." />
+                        <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+                        <label for="first-rate1" title="Terrible">1 star</label>
+                        <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+                        <label for="first-rate2" title="Not good">2 stars</label>
+                        <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+                        <label for="first-rate3" title="Average">3 stars</label>
+                        <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+                        <label for="first-rate4" title="Very good">4 stars</label>
+                        <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+                        <label for="first-rate5" title="Amazing">5 stars</label>
+                      </fieldset>
+                </div> 
+                <div class="mb-3 mt-3">
+                    <label for="comment" class="form-label">Comment</label>
+                    <textarea name="review[comment]" id="comment" cols="30" rows="5" class="form-control" required></textarea>
+                    <div class="invalid-feedback">Please add your valuable feedback</div>
+                </div>
+                <button class="btn btn-outline-dark">Submit</button>
+            </form>
+            <hr>
             <% } %>
+            
+            <% if(L.reviews.length >0){ %>
+            <div class="row">
+            <h4><b>All Reviews</b></h4>
+            <% for(review of L.reviews) {%>
+                <div class="card col-6">
+                    <div class="card text-bg-light mb-1" style="padding: 0px 15px 15px 15px;">
+                        <div class="card-body">
+                            <p class="card-text"><b> @<%= review.author.username%></b> </p>
+                          <p class="starability-result card-text" data-rating="<%=review.rating%>">
+                           
+                          </p>
+                          <p class="card-text"><%= review.comment%> </p>
+                        </div>
+                        <% if(currUser && review.author._id.equals(currUser._id)){ %>
+                        <form class="mt-3" method="post" action="/listings/<%= L._id %>/review/<%= review._id %>?_method=delete">
+                            <button class="btn btn-sm btn-dark">delete</button>
+                        </form>
+                        <% } %>
+                      </div>
+                </div>
+                <% } %>
+              </div>
+              <% } %>
         </div>
-
+    <div class="col-6 offset-3 mb-3">
+        <h3>Where you'll be</h3><br>
+        <div id="menu">
+            <input id="streets-v12" type="radio" name="rtoggle" value="streets" checked="checked">
+            <label for="streets-v12">streets</label>
+            <input id="satellite-streets-v12" type="radio" name="rtoggle" value="satellite" >
+            <label for="satellite-streets-v12">satellite</label>
+        </div>
+        <div id="map"></div>
     </div>
-</div>
+    </div>
+
+   
+    <script src="/script/map.js"></script>
 </body>
