--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -17,7 +17,7 @@
 <body>
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.7.0/mapbox-gl.js"></script>
     <%- include("../includes/navbar.ejs") %>
-    <div class="container">
+    <div class="container-fluid p-0">
         <%- include("../includes/flash.ejs") %>
         <%- body %>
     </div>
