--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -14,7 +14,7 @@
 
 <nav class="navbar navbar-expand-lg navbar-light bg-body-light border-bottom sticky-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/listings"><i class="fa-regular fa-compass"></i></a>
+      <a class="navbar-brand" href="/"><i class="fa-regular fa-compass"></i></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -23,12 +23,13 @@
           <a class="nav-link" href="/listings">Explore</a>
         </div> 
         <div class="navbar-nav ms-auto">
-          <form class="d-flex" role="search">
-            <input class="form-control me-2 search-inp" type="search" placeholder="Search Destination">
+          <form class="d-flex" action="/listings/search" method="post">
+            <input class="form-control me-2 search-inp" type="search" name="query" placeholder="Search Destination">
             <button class="btn btn-search" type="submit"><i class="fa-solid fa-magnifying-glass"></i></button>
           </form>
         </div>
         <div class="navbar-nav ms-auto">
+           <a class="nav-link" href="/listings">All Locations</a>
           <a class="nav-link" href="/listings/new">Add new Hotel</a>
           <%if(!currUser){%>
           <a class="nav-link" href="/login"><b>Login</b></a>
